--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<header class="header">
+    <div class="logo-container">
+        <img src="/assets/images/logo.png" class="logo" alt="Logomarca" />
+    </div>
+
+    <div class="icons-container">
+        <img src="/assets/svg/linkedin.svg" class="icon" alt="LinkedIn" />
+        <img src="/assets/svg/github-outline-fill.svg" class="icon" alt="GitHub" />
+        <img src="/assets/svg/light-cart.svg" class="icon" alt="Carrinho" />
+    </div>
+
+    <div class="header-t">
+      <a>Produtos</a>
+      <a>Contato</a>
+    </div>
+</header>
+
