--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,7 @@
 .header {
   background-color: #ffe8e8;
   height: 79px;
-  width: 100%;
+  width: calc(100% - 40px);
   margin: 0;
   padding: 0 20px;
   position: absolute;
@@ -42,6 +42,7 @@
 
 .header-t {
   width: 100%;
+  max-width: 100%;
   height: 39px;
   background-color: #BDCBBA;
   position: absolute;
